# brew-compat

./: .gitignore  README.md  check.py  setup.cfg
.github/workflows/: build.yml
