[metadata]
name = brew-compat
version = 0.1.0
author = Manoj Karthick
author_email = manojkarthick@ymail.com
url = https://github.com/manojkarthick/brew-compat
description = CLI tool for checking homebrew formulae compatibility for different macOS versions
long_description_content_type = text/markdown
long_description = file: README.md
keywords = homebrew, brew, cli
license = MIT License
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
install_requires =
    requests
    prettytable
py_modules =
    check
python_requires = >=3.6


[options.entry_points]
console_scripts =
    brew-compat = check:cli
